# amazon-keyspaces-examples

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  THIRD-PARTY_LICENSES.txt  ks_redis.py
scala/datastax-v4/aws-glue/: README.md  cassandra-application.conf  glue-setup-template.yaml  keyspaces-application.conf  keyspaces-bulk-cli  keyspaces-glue  keyspaces_glue_cli.py  pyproject.toml  requirements.txt  setup-connector.sh
scala/datastax-v4/aws-glue/bulk-delete/: README.md  bulk-delete-sample.scala  glue-job-bulk-delete.yaml  setup-bulk-delete.sh
scala/datastax-v4/aws-glue/compress-partition/: README.md  compress-partition.scala  glue-job-compress-partition.yaml
scala/datastax-v4/aws-glue/count-table-rows/: README.md  count-example.scala  glue-job-count-rows.yaml  setup-count.sh  setup.sh
scala/datastax-v4/aws-glue/distinct-keys/: README.md  cassandra-application.conf  distinct-keys-example.scala
scala/datastax-v4/aws-glue/export-to-s3/: README.md  application.conf  cassandra-application.conf  export-sample.scala  glue-job-export-to-s3.yaml  setup-export.sh  setup.sh
scala/datastax-v4/aws-glue/generate-random-data/: README.md  cassandra-application.conf  create-table.cql  generate-sample.scala
scala/datastax-v4/aws-glue/import-from-s3/: README.md  cassandra-application.conf  glue-job-import-from-s3.yaml  import-sample.scala  setup-import.sh  setup.sh
scala/datastax-v4/aws-glue/incremental-export-to-s3/: README.md  cassandra-application.conf  glue-job-diff.yaml  glue-job-incremental-import.yaml  incremental-export-sample.scala  setup-export.sh  (+2 more)
(+187 files in other folders)
