[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "keyspaces-bulk-cli"
version = "0.1.0"
description = "CLI for Amazon Keyspaces AWS Glue jobs"
requires-python = ">=3.8"
dependencies = [
    "typer[all]>=0.9.0",
    "boto3>=1.28.0",
    "rich>=13.0.0",
]

[project.scripts]
keyspaces-bulk-cli = "keyspaces_glue_cli:app"

[tool.setuptools]
py-modules = ["keyspaces_glue_cli"]
